test/users/rohanbadlani/bugs/bug1.good
bug1.chpl:1: syntax error: no matching parenthesis found for '{'
